--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
