--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
@@ -17,6 +19,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pug": "2.0.0-beta11",
+    "redis": "^2.8.0",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
